@@ -2,6 +2,8 @@
         not all port security traps are handled
           (http://www.packetfence.org/mantis/view.php?id=363)
         require at least version 0.16 of Net::Pcap in SPEC
+        web.pm still refers to parse_auth_conf
+          (http://www.packetfence.org/mantis/view.php?id=365)
 
 
 1.7.2
